<resources>
    <string name="app_name">TestDemo</string>
    <string name="today">标题</string>
    <string name="tomorrow">明天是12/12</string>
    <string name="first_hint">请输入姓名</string>
    <string name="main_page">首页</string>
    <string name="bit_qr">你点击了扫一扫</string>
    <string name="bit_back">你点击了返回键</string>
    <string name="bit_message">你点击了消息</string>
    <string name="error_message">违规操作</string>
    <string name="first_activity">标题</string>
    <string name="refresh_data">刷新数据</string>
    <string name="load_data">加载数据</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">账号或密码错误</string>
    <string name="input_again_password">请再次输入密码</string>
    <string name="account">用户账号：</string>
    <string name="password">用户密码：</string>
    <string name="again_password">确认密码：</string>
    <string name="register_not_equal">两次密码输入不一致</string>
    <string name="input_password_again">请输入确认密码</string>
    <string name="register_success">注册成功</string>
</resources>