<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@drawable/first_bg"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:lines="2"
                android:padding="10dp"
                android:text="@string/today" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/second_bg"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/tomorrow"
                android:visibility="gone"
                app:drawableTopCompat="@mipmap/ic_launcher" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/second_bg"
                android:padding="10dp"
                android:src="@mipmap/cat" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/second_bg"
                android:gravity="top"
                android:hint="@string/first_hint"
                android:lineSpacingExtra="5dp"
                android:lines="4"
                android:maxLength="20"
                android:padding="10dp"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/second_bg"
                android:padding="10dp"
                android:src="@mipmap/cat" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/second_bg"
                android:padding="10dp"
                android:src="@mipmap/cat" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/second_bg"
                android:padding="10dp"
                android:src="@mipmap/cat" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>